# Bookstore

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code  run_tests  总体设计文档.md  标准要求.md  需求分析文档.md
App/: 用户手册.md  系统安装手册.md
data/: userData
doc/: 总体设计文档.md  用户手册.md  系统安装手册.md
frontend/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
frontend/dialogs/: buydialog.hpp  deletedialog.hpp  financedialog.hpp  importdialog.hpp  logdialog.hpp  logindialog.hpp  modifydialog.hpp  outcomedialog.hpp  passwddialog.hpp  registerdialog.hpp  reportdialog.hpp  selectdialog.hpp  showbookdialog.hpp  useradddialog.hpp
frontend/src/: main.cpp  mainwindow.cpp  mainwindow.hpp
frontend/ui/: ui_buy.hpp  ui_delete.hpp  ui_finance.hpp  ui_import.hpp  ui_log.hpp  ui_login.hpp  ui_mainwindow.hpp  ui_modify.hpp  ui_passwd.hpp  ui_register.hpp  ui_report.hpp  ui_select.hpp  ui_showbook.hpp  ui_showcase.hpp  ui_useradd.hpp
include/: Token.hpp  book.hpp  log.hpp  parser.hpp  storage.hpp  user.hpp  validator.hpp
src/: Token.cpp  book.cpp  log.cpp  main.cpp  parser.cpp  storage.cpp  tempCodeRunnerFile.cpp  user.cpp
前置作业/: MemoryRiver.hpp  document_storage  document_storage.cpp  index  information  test  test.cpp  test.in
